# WG_AVTO_BOT

./: .env.example  INSTALL_UBUNTU.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/database/: __init__.py  connection.py
app/database/repositories/: __init__.py  logs.py  users.py  wireguard_configs.py
app/handlers/: __init__.py  admin_menu.py  auth.py  connections.py  fallback.py  menu.py  start.py
app/handlers/middlewares/: __init__.py  auth_required.py
app/integrations/: __init__.py  mikrotik.py
app/services/: __init__.py  auth_service.py  mikrotik_service.py  wireguard_service.py
app/ui/: keyboards.py  labels.py  texts.py
app/utils/: __init__.py  ip_pool.py  logger.py  logging_compat.py  security.py  session.py
docker/bot/: Dockerfile
examples/: wg_generation_example.py
scripts/: ci_check.sh  update.sh
tests/: test_auth_service_login.py  test_logs_repository.py  test_mikrotik_client.py
