[project]
name = "wg-avto-bot"
version = "0.1.0"
description = "Telegram bot for WireGuard management on MikroTik"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.15.0,<4.0.0",
  "asyncpg>=0.30.0",
  "redis>=5.2.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "bcrypt>=4.2.1",
  "cryptography>=44.0.0",
  "librouteros>=3.4.1",
  "structlog>=24.4.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
